adding commented out changes to end

--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -710,6 +710,7 @@
     }
    ],
    "source": [
+    "#check each type individually in order to get inside the dictionary\n",
     "data_type = type(longitude).__name__\n",
     "print(data_type)"
    ]
@@ -729,6 +730,7 @@
     }
    ],
    "source": [
+    "#now check the latitude type\n",
     "data_type2 = type(latitude).__name__\n",
     "print(data_type2)"
    ]
@@ -748,6 +750,7 @@
     }
    ],
    "source": [
+    "#just for extra, check rating type\n",
     "data_type3 = type(rating_value).__name__\n",
     "print(data_type3)"
    ]
